@@ -1,3 +1,12 @@
+2003-12-17  Jim Ingham <jingham@apple.com>
+
+        * macosx/tkMacOSXScrlbr.c: Reworking Vince's fix to [Bug 842952].  
+	This version is clearer, and works helps keep the mouse better pinned to the
+        scrollbar.  I also removed the glitch where the scrollbar would jump get
+	its middle over the mouse when you first moved it.
+	
+	Import from TOT.
+	
 2003-12-11  David Gravereaux <davygrvy@pobox.com>
 
 	win/winMain.c: Backed-out yesterdays change.  Reverted to 1.15 for
